--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -9,7 +9,7 @@
 
         <ng-template #login>
             <span class="navbar-text">
-                <a>Please, login!</a>
+                <a [routerLink]="['']">Please, login!</a>
             </span>
         </ng-template>
     </nav>
