--- a/src/app/home/signup/signup.component.html
+++ b/src/app/home/signup/signup.component.html
@@ -1,5 +1,5 @@
 <h4 class="text-center">Register</h4>
-<form [formGroup]="signupForm" class="form mt-4">
+<form [formGroup]="signupForm" class="form mt-4" (submit)="signup()">
     <div class="form-group">
         <input formControlName="email" class="form-control" placeholder="email" autofocus>
         <ap-vmessage *ngIf="signupForm.get('email').errors" text="Email invalid">
@@ -16,6 +16,9 @@
         <input formControlName="userName" class="form-control" placeholder="user name">
         <ap-vmessage *ngIf="signupForm.get('userName').errors" text="User name invalid">
         </ap-vmessage>
+        <ap-vmessage *ngIf="signupForm.get('userName').errors?.userNameTaken" text="User name already taken">
+        </ap-vmessage>
+        <small *ngIf="signupForm.get('userName').valid">User name available</small>
     </div>
 
     <div class="form-group">
@@ -24,7 +27,7 @@
         </ap-vmessage>
     </div>
 
-    <button class="btn btn-primaty btn-block">Register</button>
+    <button [disabled]="signupForm.invalid || signupForm.pending" class="btn btn-primaty btn-block">Register</button>
 
     <p>Already a user? <a [routerLink]="['']">Sign In!</a></p>
 </form>
