--- a/src/app/home/signup/signup.component.html
+++ b/src/app/home/signup/signup.component.html
@@ -1,7 +1,7 @@
 <h4 class="text-center">Register</h4>
 <form [formGroup]="signupForm" class="form mt-4" (submit)="signup()">
     <div class="form-group">
-        <input formControlName="email" class="form-control" placeholder="email" autofocus>
+        <input #inputEmail formControlName="email" class="form-control" placeholder="email" autofocus>
         <ap-vmessage *ngIf="signupForm.get('email').errors" text="Email invalid">
         </ap-vmessage>
     </div>
@@ -27,7 +27,7 @@
         </ap-vmessage>
     </div>
 
-    <button [disabled]="signupForm.invalid || signupForm.pending" class="btn btn-primaty btn-block">Register</button>
+    <button [disabled]="signupForm.invalid || signupForm.pending" class="btn btn-primary btn-block">Register</button>
 
     <p>Already a user? <a [routerLink]="['']">Sign In!</a></p>
 </form>
